--- a/kids/index.html
+++ b/kids/index.html
@@ -309,7 +309,7 @@
 			</div>
 			<div id="ace-score" class="modal closed">
 				<h2><span class="red">E</span><span class="yellow">x</span><span class="green">c</span><span class="pink">e</span><span class="blue">l</span><span class="red">l</span><span class="yellow">e</span><span class="green">n</span><span class="pink">t</span>&nbsp;<span class="blue">!</span></h2>
-				<p>Tu as compléter toute la grille sans te tromper&nbsp;!</p>
+				<p>Tu as complété toute la grille sans te tromper&nbsp;!</p>
 				<p>Clique n'importe où, touche l'écran ou appuie sur une touche pour faire une autre partie.</p>
 			</div>
 			<div id="champion-score" class="modal closed">
