--- a/daily/index.html
+++ b/daily/index.html
@@ -2,13 +2,13 @@
 <html lang="fr" manifest="mokole.appcache">
 	<head>
 		<meta charset="utf-8">
-		<title>MOKOLÉ Kids</title>
-	    <meta name="description" content="MOKOLÉ Kids est une version simplifiée du jeu de lettres MOKOLÉ qui consiste à deviner les douze lettres formant une grille colorée de six mots.">
+		<title>MOKOLÉ Daily</title>
+	    <meta name="description" content="MOKOLÉ Daily propose chaque jour une grille du jeu de lettres MOKOLÉ.">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="mobile-web-app-capable" content="yes">
-		<meta name="application-name" content="MOKOLÉ Kids">
+		<meta name="application-name" content="MOKOLÉ Daily">
 		<meta name="apple-mobile-web-app-capable" content="yes">
-		<meta name="apple-mobile-web-app-title" content="MOKOLÉ Kids">
+		<meta name="apple-mobile-web-app-title" content="MOKOLÉ Daily">
 		<link rel="apple-touch-icon" sizes="57x57" href="apple-icon-57x57.png">
 		<link rel="apple-touch-icon" sizes="60x60" href="apple-icon-60x60.png">
 		<link rel="apple-touch-icon" sizes="72x72" href="apple-icon-72x72.png">
@@ -26,7 +26,8 @@
 		<meta name="msapplication-TileImage" content="ms-icon-144x144.png">
 		<meta name="theme-color" content="#0fb8ad">
 		<link rel="manifest" href="manifest.json">
-	    <link rel="canonical" href="//mokole.com/kids/">
+	    <link rel="canonical" href="//mokole.com/daily/">
+	    <meta name="robots" content="noindex">
 	    <style>
 		    /* z-indexes */
 		    .modal { z-index: 2000; }
@@ -166,7 +167,7 @@
 				height: 100%;
 				opacity: 0.8;
 				background-color: #c69647;
-			    background-image: url(img/tinified/wood-bg-02.png);
+			    background-image: url(img/tinified/wood-bg-03.png);
 			    background-repeat: repeat;
 			    background-size: contain;			    
 		    }
@@ -213,7 +214,7 @@
 			}
 		    .modal {
 			    position: absolute;
-			    background-image: url(img/tinified/wood-bg-03.png);
+			    background-image: url(img/tinified/wood-bg-02.png);
 			    background-repeat: repeat;
 			    background-size: contain;
 			    top: 64px;
@@ -282,7 +283,7 @@
 		<div class="clickable" onclick="">
 			<div class="main">
 				<div class="topbar">
-					<h1 class="logo">MOKOLÉ Kids</h1>
+					<h1 class="logo">MOKOLÉ Daily</h1>
 					<div id="toggle-sound" class="volume mute pulse closed"></div>
 				</div>
 				<div id="screen-container" class="screen-container">
@@ -672,7 +673,7 @@
 				} else if (window.location.href.indexOf("?hard") != -1) {
 					json_url = "hard.json";
 				} else {
-					json_url = "mokole-kids.json";
+					json_url = "easy.json";
 				}
 				xobj.open('GET', json_url, true); 
 				xobj.onreadystatechange = function () {
@@ -833,7 +834,7 @@
 			
 			if ("serviceWorker" in navigator) {
 				window.addEventListener("load", function () {
-					navigator.serviceWorker.register("/kids/service-worker.js", {scope: "/kids/"}).then(
+					navigator.serviceWorker.register("/daily/service-worker.js", {scope: "/daily/"}).then(
 						function () { console.log("serviceWorker registration complete."); },
 						function () { console.log("serviceWorker registration failure."); }
 					);
