--- a/v3/index.html
+++ b/v3/index.html
@@ -70,7 +70,7 @@ header {
 header h1 {
     margin: 0;
     padding: 0 15px; 
-    font-size: 40px;
+    font-size: calc(max(20px, min(40px, 100vw - 430px)));    
 }
 header button {
     background: none;
