--- a/v3/index.html
+++ b/v3/index.html
@@ -1016,9 +1016,18 @@ if ('serviceWorker' in navigator) {
     window.addEventListener('load', function() {
         navigator.serviceWorker.register('service-worker.js').then(function(registration) {
             console.log('ServiceWorker registration successful with scope: ', registration.scope);
+            if (registration.waiting) {
+                registration.waiting.postMessage({ action: 'skipWaiting' });
+            }
+            registration.addEventListener('updatefound', function() {
+                if (registration.installing) {
+                    registration.installing.postMessage({ action: 'skipWaiting' });
+                }
+            });
         }, function(err) {
             console.log('ServiceWorker registration failed: ', err);
         });
+        navigator.serviceWorker.addEventListener('controllerchange', () => window.location.reload();
     });
 }
 
