--- a/v3/index.html
+++ b/v3/index.html
@@ -1027,7 +1027,7 @@ if ('serviceWorker' in navigator) {
         }, function(err) {
             console.log('ServiceWorker registration failed: ', err);
         });
-        navigator.serviceWorker.addEventListener('controllerchange', () => window.location.reload();
+        navigator.serviceWorker.addEventListener('controllerchange', () => window.location.reload());
     });
 }
 
