--- a/v3/index.html
+++ b/v3/index.html
@@ -327,8 +327,8 @@ header button:hover {
                         <li><strong>&#x2606;&#x2606;&#x2606;&#x2606;&#x2606;</strong> : cinq erreurs et plus.</li>
                     </ul>
                     <h3>Les mots utilisés</h3>
-                    <p>Les grilles sont générées à partir d'environ 15 000 mots, parmi les plus fréquents de la langue française.</p>
-                    <p>Les onomatopés ont été exclues, les verbes sont à l'infinif, les noms au singulier et les adjectifs au masculin singulier. Tous les mots sont présentés sans accents, utilisant uniquement des lettres allant de A à Z.</p>
+                    <p>Les grilles sont générées à partir d'environ 12 500 mots, parmi les plus fréquents de la langue française.</p>
+                    <p>Les onomatopés et les articles ont été exclus, les verbes sont à l'infinif, les noms au singulier et les adjectifs au masculin singulier. Tous les mots sont présentés sans accents, utilisant uniquement des lettres allant de A à Z.</p>
                     <p>A noter que tous les mots de la liste sont présents dans l'ODS 9 (Officiel du Scrabble).</p>
                     <h3>Lettres déjà placées ?</h3>
                     <p>Dans la mesure du possible, les problèmes générés ont une solution unique et pour cela il faut parfois placer une ou plusieurs lettres initiales afin de résoudre les ambiguités.</p>
