--- a/index.html
+++ b/index.html
@@ -996,7 +996,7 @@
 				</div>
 			</div>
 			<div id="bottombar">
-				&copy;2017 <a href="http://mokole.com/">MOKOLE.COM</a>
+				&copy;2017 <a href="http://mokole.com/">MOKOLE.COM</a> (<a href="/v3/" title="Dernière version de MOKOLE">V3</a>)
 			</div>
 		</div>
 		<div id="fix-vmin" style="position: absolute; top: 100vh; left: 100vw;"></div>
