--- a/v3/index.html
+++ b/v3/index.html
@@ -487,7 +487,7 @@ function selectWords(words, targetNumLetters = 12, targetNumWords = 6) {
         let selectedWords = [];
         let selectedLetters = new Set();
 
-        const forbiddenLetters = new Set(randomSample("EASINRTOLU".split(''), 4));
+        const forbiddenLetters = new Set(randomSample("ERIATNOU".split(''), 2));
 
         for (const word of fisherYatesShuffle(words)) {
             const letters = new Set(word.split(''));
